Fixed active/hidden menu children to array conversion Fixed calculations making room for overflow button

--- a/react/es/ppnav.scss
+++ b/react/es/ppnav.scss
@@ -58,8 +58,11 @@
   }
 
   &__indicator {
+    // Hidden but not displayed so we can calculate dimensions
     &[aria-hidden="true"] {
-      display: none;
+      position: absolute;
+      visibility: hidden;
+      left: 0;
     }
   }
 }
